Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -321,8 +321,6 @@
             }
         }
         ul {
-            display: table;
-            float: none;
             margin: 0 auto;
             text-align: center;
             padding: 0;
